fixed animation on mobile version of client testimonials

--- a/styles.css
+++ b/styles.css
@@ -460,7 +460,7 @@ footer {
 		animation: none;
 	}
 
-    .clientThree.is-visible {
+    .clientTwo.is-visible {
         animation: none;
     }
     form {
